--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "bootstrap-sweetalert": "^1.0.1",
     "datatables.net": "^1.10.20",
     "datatables.net-dt": "^1.10.20",
-    "firebase": "^7.6.2",
+    "firebase": "^7.7.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
@@ -36,13 +36,13 @@
     "particles.js": "^2.0.0",
     "rxjs": "~6.4.0",
     "slider-carousel": "^1.0.5",
-    "sweetalert2": "^9.5.4",
+    "sweetalert2": "^9.7.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.21",
-    "@angular/cli": "~8.3.21",
+    "@angular-devkit/build-angular": "^0.803.23",
+    "@angular/cli": "^8.3.23",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
     "@types/datatables.net": "^1.10.18",
